fix(rules): Overflow in the prefrences sidebar. Fixes #908

--- a/internal_packages/preferences/stylesheets/preferences.less
+++ b/internal_packages/preferences/stylesheets/preferences.less
@@ -77,6 +77,9 @@
           padding: @padding-large-vertical * 0.8 @padding-large-horizontal + 4;
           border-top: 1px solid @border-color-divider;
           border-right:3px solid transparent;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          padding-right: 8px;
         }
       }
     }
